# sgemm

./: .gitignore  CMakeLists.txt  README.md  main.cu
array_add/: CMakeLists.txt  array_add_bench.cu  array_add_bench.out  array_add_kernels.cuh  array_add_test.cu
src/: utils.cu
